--- a/CultivaTech/backend/package.json
+++ b/CultivaTech/backend/package.json
@@ -8,7 +8,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
@@ -25,5 +24,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
-  }
+  },
+  "description": ""
 }
